deployment.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: go-server
  labels:
    - app: "goserver"
spec:
  selector:
    matchLabels:
      app: goserver
  replicas: 2
  template:
    metadata:
      labels:
        app: "goserver"
    spec:
      containers:
        - name: goserver
          image: "eduardogomesf/hello-go:latest"
