pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "go-server"
  labels:
    app: "goserver"
spec:
  containers:
    - name: goserver
      image: "eduardogomesf/hello-go:latest"
