statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
spec:
  serviceName: mysql-h
  replicas: 3
  selector:
   matchLabels:
    app: mysql
  template:
    metadata:
      labels:
        app: mysql
      spec:
        containers:
          - name: mysql
            image: mysql
            volumeMounts:
              - mountPath: /var/lib/mysql
                name: mysql-volume
                   
  volumeClaimTemplates: # create volumes dynamically by replica scaling
    - metadata:
        name: mysql-volume
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 5Gi
