service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goserver-service
spec:
  selector:
    app: goserver
  type: ClusterIP # can be changed to be a LoadBalancer to have an external IP address
  ports:
    - name: goserver-service
      port: 80
      protocol: TCP
      targetPort: 8000 # port of the pods
